Add Custom Font

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preload" as="font" href="assets/fonts/LondrinaSolid-Regular.ttf" type="font/ttf" />
 
 </head>
 <body class="flex-center">
