--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preload" as="font" href="assets/fonts/LondrinaSolid-Regular.ttf" type="font/ttf" />
-
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon-96x96.ico">
 </head>
 <body class="flex-center">
     <div class="flex-center flex-col">
